--- a/style.css
+++ b/style.css
@@ -1,23 +1,121 @@
-body { margin: 0; background: #000000; overflow: hidden; }
+body {
+  margin: 0;
+  background: #000000;
+  overflow: hidden;
+  cursor:
+    url("—Pngtree—machete_5996408 (1).png") 16 16,
+    auto;
+}
 
 .viewport {
-  width: 100vw; height: 100vh;
+  width: 100vw;
+  height: 100vh;
   perspective: 1000px;
-  display: flex; justify-content: center; align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .scene {
   transform-style: preserve-3d;
-  width: 100%; height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .album {
   position: absolute;
-  top: 50%; left: 50%;
-  width: 350px; height: 350px;
-  margin: -175px; 
+  top: 50%;
+  left: 50%;
+  width: 350px;
+  height: 350px;
+  margin: -175px;
   transition: opacity 0.5s;
 }
 
-.album img { width: 100%;
+.album img {
+  width: 100%;
+}
+
+.main-page {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #000;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 50px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.8s ease;
+  z-index: 100;
+}
+
+.main-page.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+h1 {
+  font-weight: 200;
+  font-size: 2vw;
+  margin: 0;
+  filter: url(#goo);
+  position: relative;
+  letter-spacing: -0.12em;
+  color: red;
+  text-transform: uppercase;
+}
+
+.drop {
+  width: 0.2em;
+  height: 0.2em;
+  border-radius: 0 100% 100% 100%;
+  background-color: currentColor;
+  position: absolute;
+  top: 72%;
+  animation: drop 1.5s infinite both;
+
+  &:nth-child(1) {
+    left: 14%;
+  }
+
+  &:nth-child(2) {
+    left: 39%;
+    animation-delay: -0.4s;
+  }
+
+  &:nth-child(3) {
+    left: 55%;
+    animation-delay: -1.5s;
+  }
+
+  &:nth-child(4) {
+    left: 82%;
+    animation-delay: -0.8s;
+  }
+
+  &:nth-child(5) {
+    left: 95.5%;
+    animation-delay: -1.3s;
+  }
+}
+
+@keyframes drop {
+  0% {
+    transform: translateY(0) scaleX(0.85) rotate(45deg);
+    animation-timing-function: ease-out;
+  }
+  60% {
+    transform: translateY(120%) scaleX(0.85) rotate(45deg);
+    animation-timing-function: ease-in;
+  }
+  80%,
+  100% {
+    transform: translateY(60vh) scaleX(0.85) rotate(45deg);
+  }
 }
